# CS-499-Portfolio

./: README.md  index.html
Artifact_New/: CS 300 Project Two.sln
Artifact_New/CS 300 Project Two/: CS 300 Project Two.vcxproj  CS 300 Project Two.vcxproj.filters  Main.cpp  Main.h  Module.ixx  RedBlackTree.cpp  RedBlackTree.hpp  StringToKey.cpp  StringToKey.hpp  courses.txt  resource.h
Artifact_New/RedBlackTreeTests/: RedBlackTreeTests.cpp  RedBlackTreeTests.vcxproj  RedBlackTreeTests.vcxproj.filters
Artifact_New/SQLAPI/: ReadMe.txt  desktop.ini  documentation.html
Artifact_New/SQLAPI/bcc-cb102/lib/: sqlapib.lib  sqlapibs.lib  sqlapibud.lib  sqlapibus.lib
Artifact_New/SQLAPI/bcc-cb104/lib/: sqlapib.lib  sqlapibd.lib  (+8 more)
Artifact_New/SQLAPI/include/: SQLAPI.h  duckdbAPI.h  odbcAPI.h  ssNcliAPI.h
Artifact_New/SQLAPI/samples/: CMakeLists.txt  Makefile  Makefile.bccx  Makefile.clang  Makefile.mvc  Oracle_PLSQL_Return.cpp  Scrollable_Cursor.cpp  bugtest.cpp  bulk_fetch.cpp  mssqlarray.cpp  native_api.cpp  nestedcursors.cpp  oraclearray.cpp  refcursors.cpp  sqlite_see.cpp  sqltest.cpp  sqltest_bcc.bat  sqltest_bccx.bat  sqltest_c.c  sqltest_c.vcxproj  sqltest_clang  sqltest_clr.csproj  sqltest_gcc  sqltest_mingw.bat  sqltest_mvc.bat  step1.cpp  step2.cpp  step3.cpp  step4.cpp  step5.cpp  step6.cpp  step7.cpp  test.cpp
Artifact_Old/: CS 300 Project Two.sln
Artifact_Old/CS 300 Project Two/: CS 300 Project Two.vcxproj  CS 300 Project Two.vcxproj.filters  Main.cpp
Milestones/: CS 499 Milestone Four.docx  CS 499 Milestone Three.docx  CS 499 Milestone Two.docx
(+60 files in other folders)
